--- a/dev/scss/utils/_helpers.scss
+++ b/dev/scss/utils/_helpers.scss
@@ -122,7 +122,7 @@ $positions: '-top' '-right' '-bottom' '-left' ''; // One left blank for the clea
 	&-fill  { // Counter spacing the grid for covering margins defined by grid. ATT! Depending on grid side paddings as they are
 		&-right	{
 			@include breakpoint( 'desktop' ){
-				width: calc( 100% + #{$scale-2-1} + #{$scale-4-1} ) !important;
+				width: calc( 100% + #{$scale-4-1} ) !important;
 			}
 			@include breakpoint( 'tablet' ) {
 				width: calc( 100% + #{$scale-8-1} ) !important;
@@ -130,7 +130,7 @@ $positions: '-top' '-right' '-bottom' '-left' ''; // One left blank for the clea
 				margin-right: 0 !important;
 			}
 			@include breakpoint( 'widescreen' ){
-				width: calc( 100% + #{$scale-2-1} + #{$scale-8-1} ) !important;
+				width: calc( 100% + #{$scale-8-1} ) !important;
 			}
 			@include breakpoint( 'extraWidescreen' ) {
 				width: auto !important;
